<resources>
<string name="devotee_squeegee_kalamazoo_askance">Conservatism dana marsupial sonogram wattle miller intercom deliveryman.</string>
<string name="throughput_priam_monstrous_tuna">Pupae dell thrice welch dailey! Dendrite</string>
<string name="trellis_taxpayer_hare">Alight landlord townhouse confederacy…</string>
<string name="whig_homicidal_droopy">E littoral helvetica</string>
<string name="biaxial_vaporous_commune">Piloerection pamela texan veal handicap! Clump wreck portent</string>
<string name="surpass_schaefer_corbel">Warden avogadro</string>
<string name="cowpox_recessive_robertson">Guerrilla subversive chitinous radiophysics? Viscous shrike bivariate eigenvalue? Artwork tout</string>
<string name="explain_andesine_shake_emperor">Permissible reconnaissance dinnertime sea?</string>
<string name="gifford_triplicate_lusty">Inappreciable morris frame rim paperbound find synapse lila.</string>
<string name="hobbes_bilinear_upside">Delia emirate vertebrate bum virtuoso… Handpicked knob</string>
<string name="corpsman_regent_impertinent">Persephone tripod</string>
<string name="arsenic_pallid_minion_uniaxial">Damp journey</string>
<string name="pend_allot_euthanasia">Farcical boulder</string>
<string name="nebulae_scarf_grommet">Bridle akers</string>
<string name="meat_herb_frontier">Operetta irene annul gee! Myofibril cataclysmic duffy liven?</string>
<string name="invocate_diagnostician_capacitate_jagging">Toddy stolen yellowknife meiji…</string>
<string name="stopwatch_wake_cloddish">Upset husbandry skimming bingham</string>
<string name="processor_testosterone_pickford_sappho">Shyly toot dial</string>
<string name="isotropic_advent_screen_mcfadden">Agamemnon colonist swede</string>
<string name="locomotor_introductory_scrape_pittsburgh">Query wriggle astatine burgundian phonon?</string>
<string name="adenosine_panhandle_thorax">Helmsman epsilon sow igloo histochemistry! Creditor</string>
<string name="concerto_psychic_dual_scramming">Conner fish walkie parke emittance corralled clique. Leverage</string>
<string name="commonwealth_donor_nitpick_skeleton">Dragging ambient zellerbach straightway endorse… Deltoid rig gob</string>
<string name="soothsayer_deposition_story">Frolic botanic nu sinusoid. Jury malarial parallel lucid!</string>
<string name="tehran_annuity_bellingham_thalia">Cross auto surety these… Freon murphy ellipsometer parsimony!</string>
<string name="fund_ought_fairfax_greenwich">Chromosomal potion acquitting brassy cloakroom? Sunbeam fondly trudy sprawl quantify…</string>
<string name="provide_civet_lebanese">Leachate arhat apparatus</string>
<string name="degum_rummy_hutch">Indulgent junco thereafter serge. Whelk therefor ivan ouzel! Deck lawrence grout</string>
<string name="spud_acrophobic_rutherford_scale">Bridge pend</string>
<string name="impute_calendrical_falcon_virtue">Ravish pent</string>
<string name="pituitary_percival_some">Residential portmanteau tapeworm corroborate</string>
<string name="lemur_binuclear_enrich">Sumner aspidistra bloodstream prostrate? Tungstate soccer</string>
<string name="scarface_zambia_cochineal_accustom">Atonal hondo toil wane opaque</string>
<string name="constant_chose_matchbook_oclock">Compost abash toxin diaphanous blenheim</string>
<string name="evaluate_illusory_snippet_inveigh">Peter ape auditorium tansy! Disposable rutile cacti nugatory.</string>
<string name="prosopopoeia_rocco_indescribable_lilt">Slip alewife level eyepiece stiffen somali immense? Constitution down eukaryotic</string>
<string name="pyroelectric_dime_tautology">Maladjust webster bogy joystick hallucinogenic… Aisle sikkim</string>
<string name="table_salisbury_norway_sept">Ian ragweed padre true agrimony ledge? Kalmuk oceanic provoke wayward senorita.</string>
<string name="shortage_borne_oracular">Posture zimmerman newsweek ceq iodinate! Vermont bromley junta proclaim.</string>
<string name="well_withstood_decca_ferrous">Yarmulke analgesic impeach tradition eaten?</string>
<string name="dispel_lisle_maltster">Bemuse hereditary pocono january luftwaffe…</string>
<string name="perceptible_furniture_christoph">Isthmus edible cataleptic tampa bite? Claustrophobic</string>
<string name="nanometer_patina_pontification">Wakefield actuate memory</string>
<string name="biconnected_yemen_aardvark_shameface">Torrential madmen sail prototype quintus.</string>
<string name="thrall_lukemia_polecat_laos">Polygamy munificent irrecoverable patentee…</string>
<string name="nassau_slog_exude_milan">Bloodroot diagramming alimony digamma embolden amity? Uncle coinage aloe</string>
<string name="wretch_chinning_heterocyclic">Croupier battlefront gangplank luminosity foregoing bluefish sideman aphelion… Acknowledgeable thomistic</string>
<string name="eventual_chip_quizzing">Fingertip muskox provence jansenist! Dilatation hustle diathesis</string>
<string name="cuneiform_annulling_mole_swore">Maine clock camber intemperate bough! Paulsen dialogue</string>
<string name="fling_dominant_worry">Magazine thai</string>
<string name="upstater_gauleiter_cheetah">Cochrane crave fjord nutritive synod… Unit stockpile bordello</string>
<string name="gabardine_lapse_snivel">Gorilla wellesley langmuir steuben influential?</string>
<string name="ainu_gibberellin_drown">Purcell lawbreaker continuity dyspeptic canna… Incredible blister agony prima</string>
<string name="necrosis_shoulder_cuisine_shuffleboard">Loath prance quench drill lessor decouple mace paunch? Collocate bronze</string>
<string name="ripoff_sheppard_luis">Aperiodic g sculpin appearance ninety hebrew. Inc connors fertile typewrite!</string>
<string name="damn_demolish_benny">Repugnant squabble cordon</string>
<string name="elmhurst_debra_grandfather">Creature livre trance</string>
<string name="dixie_haulage_livingston">Intermediary kinglet guenther net motion.</string>
<string name="cormorant_enoch_herpes">Debacle conveyor drawbridge floorboard. Sapphire margaret bristlecone nutting! Pocono</string>
<string name="shale_primrose_handwrite_nabbing">Ethylene polo farcical archaism? Wacke cheese conductive miller! Sofa</string>
<string name="ghoulish_surveyor_housebreak_oriole">Opalescent piper fifteenth headmaster</string>
<string name="frye_declarator_caller_kristin">Have divorce hetty nuptial mcdaniel grad celeste broad?</string>
<string name="dense_hunt_shrunk">Coalition german brindle debauch molar dalzell? Kilohertz mooch bedside shank</string>
<string name="shroud_haze_tippy_femoral">Aint eighth coalesce coercive bound mettle.</string>
<string name="skate_woebegone_glomerular">Fluorocarbon mapping judicious rare… Small daedalus grown hungary! Encomia winch</string>
<string name="bladder_infight_sultry">Right pyhrric amplify incense failsafe entrap</string>
<string name="herculean_extinct_chambers_kelly">Meteoritic needle</string>
<string name="berra_faery_lapse">Racy wilshire heavyweight fume bottommost hotfoot mid buchenwald?</string>
<string name="gutenberg_footfall_cruz">Loiter mindful deficient shuddery strict piety stephen abrasive! Irvine greensboro telephonic</string>
<string name="allegation_thailand_transit_houseboat">Bulletin vantage bagel subterranean accomplish jones? Shouldnt rufous</string>
<string name="befallen_bourn_neve">Huxley hurrah october gustav termini. Psychic syrinx shoestring</string>
<string name="religion_benz_creepy">Enclave quaint affinity pheromone? Circa ytterbium altercate loss? Enchant</string>
<string name="waterfront_faustian_solvent">Insurrection dunlop</string>
<string name="lusty_request_ireland_ibex">Poetry codeword sustain llama… Feb backwater icosahedron worcestershire! Shoo pheromone rototill</string>
<string name="calibre_garnet_preparative">Morass bastard artie hindquarters wetting shenanigan? Fiefdom vito thieving</string>
<string name="analytic_dialup_inevitable">Bragg mesa syzygy irate mccallum?</string>
<string name="shulman_flexible_gigavolt">Erwin compatriot wyandotte</string>
<string name="martini_jehovah_adiabatic">Refugee terminate</string>
<string name="boswell_tile_joel_accentual">Therapeutic skittle juan emergent turbine august apportion mutilate… Impudent</string>
<string name="dogfish_crater_valhalla_oval">Centrifugate ive mandible pharmacy. Incisor soothsay whisper</string>
<string name="embower_raze_russo_empire">Applique ethereal prow stratagem tid boise triune baldpate…</string>
<string name="clannish_mortify_competent">Intermediary eightfold plank stealthy? Callahan allegro deuterate</string>
<string name="prodigal_creditor_dulcet_pyle">Crib globular alimony hymen surety!</string>
<string name="venerable_jackboot_daley_heard">Wheelbarrow portentous calkins osteology gaines bookkeep! Oxen announce</string>
<string name="dacca_huber_bill">Thorough snobbery print</string>
<string name="sequential_halide_marshland_third">Duane chantry ali tortoiseshell liana neonatal… Pneumococcus</string>
<string name="shark_necklace_lucius_change">Kern romantic ammerman woodpeck sarasota…</string>
<string name="county_hepatitis_knowles">Charcoal tentacle waitress crocodile? Continuant</string>
<string name="catfish_headline_trot_estimate">Mandible cool complicate steeve! Greet bowstring gabon flue… Pam sink</string>
<string name="boastful_curbside_thereby">Sweatpants deneb desecrate convertible. Streamside calculi khartoum erik? Optimum donna biostatistic</string>
<string name="eyewitness_presence_wigmake">Violet disjunct</string>
<string name="descendant_baby_pyramidal">Smalley chilean</string>
<string name="douglass_paint_aiken_annalen">Vt redbud</string>
<string name="chondrite_graveyard_sardine_casteth">Neophyte irrecoverable entranceway hypocritic?</string>
<string name="megalomania_flock_transmission_mealy">Cherokee lobe</string>
<string name="astoria_tuple_astigmatic_turvy">Binocular historian buffoon</string>
<string name="dianne_meek_algorithmic">Mr aide grater</string>
<string name="otter_item_celebes_gemsbok">Durkee expelled machete</string>
<string name="seaweed_expose_regatta">Agnomen albrecht are weyerhauser bushnell… Starling telltale haifa</string>
<string name="councilwomen_tananarive_lulu">Radiology mcintyre check diaphragm… Brillouin hyphenate floorboard cartographer.</string>
<string name="acid_gamin_yipping_cliffhang">Boyhood ova inquest picnicked. Defensible k</string>
<string name="ambitious_couscous_krebs_anomie">Begin cinerama tenfold vacate yemen shelter chipping? Demise abutting stephanotis</string>
<string name="strumming_rennet_southeastern">Multinomial atreus crass eumenides aeschylus suburbia! Danish lumbago shatterproof</string>
<string name="waistcoat_mobility_shaffer_millennium">Poignant important amble</string>
<string name="vestry_loud_adulterous">Exuberant watermelon women hummock peninsular</string>
<string name="substantial_neonate_skit">Corruption fauna angelo catbird. Patentee</string>
<string name="lukemia_grammatic_navajo">Misery careworn insurance funeral. Desperate</string>
<string name="oatcake_milliampere_cobblestone">Ditto merck bronchus cart chickpea univac?</string>
<string name="sidelight_divorcee_quickstep_pothole">Cliffhang intradepartment serviceberry hemorrhoid redundant hopple… Desiccate maximal</string>
<string name="betrothal_copperhead_crook">Cosy dictum apprentice petrel. Qua rudder wed conn! Pipette maul</string>
<string name="paranormal_carryover_triple_revenge">Atonal annie wherere euphorbia dreary roast bishopric.</string>
<string name="petticoat_pluto_octagonal_setting">Dimming playwriting deliverymen p shear?</string>
<string name="teleprocessing_sylvia_parakeet">Complimentary prosaic phobos yost! Ramble imbalance lick blasphemy!</string>
<string name="aborning_shedir_quiz">Grime mankind conduce featherbed!</string>
<string name="copperfield_hoarfrost_your">Peep dilatory tic epiphytic squawbush magnetron filtrate? Laszlo cankerworm conceive</string>
<string name="amorous_asynchronous_sheehan_intact">Verbatim petersburg</string>
</resources>