<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="center_horizontal" android:id="@+id/toiletryLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/lignumView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<TextView android:background="@color/meaty_stirling" android:hint="@string/concerto_psychic_dual_scramming" android:id="@+id/carloadColorimetryView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/martini_jehovah_adiabatic" android:textColor="@color/committing_biology_danube" android:textSize="@dimen/shrunken_emissivity_textsize"/>
<AutoCompleteTextView android:background="@color/saddle_muffle" android:hint="@string/betrothal_copperhead_crook" android:id="@+id/stupaView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/clannish_mortify_competent"/>
<AutoCompleteTextView android:background="@color/refrigerate_rummage" android:hint="@string/commonwealth_donor_nitpick_skeleton" android:id="@+id/nicknameView" android:layout_height="wrap_content" android:layout_margin="@dimen/ornament_corrosive_size" android:layout_width="wrap_content" android:text="@string/elmhurst_debra_grandfather" android:textColor="@color/doff_fuss_concentrate"/>
<CheckedTextView android:background="#6D8485" android:hint="@string/sequential_halide_marshland_third" android:id="@+id/theologianParseView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/face_commentary_width" android:layout_marginTop="20dp" android:layout_width="wrap_content" android:text="@string/amorous_asynchronous_sheehan_intact" android:textColor="@color/tonk_customary"/>
<CheckedTextView android:background="#6BB83E45" android:hint="@string/herculean_extinct_chambers_kelly" android:id="@+id/oathDockyardView" android:layout_height="wrap_content" android:layout_margin="@dimen/haven_waistline_size" android:layout_width="wrap_content" android:text="@string/substantial_neonate_skit" android:textColor="@color/miscegenation_leeds"/>
<CheckBox android:background="@color/existential_staminate_decorous" android:hint="@string/dispel_lisle_maltster" android:id="@+id/cartilaginousView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/lucian_samoa_margin" android:paddingEnd="@dimen/serpens_obligate" android:paddingStart="38dp" android:paddingTop="@dimen/reykjavik_mendelian" android:text="@string/paranormal_carryover_triple_revenge" android:textColor="#364F75"/>
<EditText android:background="@color/sagacity_than" android:hint="@string/skate_woebegone_glomerular" android:id="@+id/gaithersburgBullyView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/wretch_chinning_heterocyclic" android:textColor="@color/witch_trammel" android:textSize="@dimen/hagen_hoosier_textsize"/>
<CheckedTextView android:background="@color/jacobus_omitting" android:hint="@string/teleprocessing_sylvia_parakeet" android:id="@+id/sanatoriaFeudatoryView" android:layout_height="wrap_content" android:layout_margin="@dimen/habitat_tetragonal_margin" android:layout_width="wrap_content" android:text="@string/perceptible_furniture_christoph" android:textColor="#8157F67C"/>
<CheckedTextView android:background="@color/conscientious_stationary" android:hint="@string/cuneiform_annulling_mole_swore" android:id="@+id/sociolinguisticStoatView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/debilitate_regiment_margin" android:text="@string/dacca_huber_bill" android:textColor="@color/decadent_trust" android:textSize="26sp"/>
<Button android:background="@color/grass_diaphragm_trompe" android:hint="@string/boastful_curbside_thereby" android:id="@+id/gogoHoarseView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/sidelight_divorcee_quickstep_pothole" android:textColor="@color/denature_chopin_regress"/>
<CheckedTextView android:background="@color/commonweal_salamander" android:hint="@string/upstater_gauleiter_cheetah" android:id="@+id/hypothesesView" android:layout_height="wrap_content" android:layout_margin="@dimen/radiometer_bridgewater_padding" android:layout_width="wrap_content" android:text="@string/oatcake_milliampere_cobblestone"/>
<TextView android:background="@color/belie_olefin" android:hint="@string/prodigal_creditor_dulcet_pyle" android:id="@+id/beguileView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/impute_calendrical_falcon_virtue" android:textColor="@color/penalty_compressor_linear"/>
<AutoCompleteTextView android:background="@color/merlin_definitive" android:hint="@string/shroud_haze_tippy_femoral" android:id="@+id/intenseConsultantView" android:layout_height="wrap_content" android:layout_margin="32dp" android:layout_width="wrap_content" android:text="@string/acid_gamin_yipping_cliffhang"/>
<TextView android:background="#8F963C10" android:hint="@string/dixie_haulage_livingston" android:id="@+id/moltInsectivoreView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/putnam_celeste_size" android:layout_width="wrap_content" android:text="@string/petticoat_pluto_octagonal_setting" android:textColor="@color/prairie_hightail_annulling" android:textSize="@dimen/religious_prognosticate_textsize"/>
<CheckBox android:background="@color/circumcircle_ionic" android:hint="@string/pyroelectric_dime_tautology" android:id="@+id/morseView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gabardine_lapse_snivel" android:textColor="#1EB7B04B" android:textSize="@dimen/mammal_preamble_textsize"/>
<CheckBox android:background="#090D4F" android:hint="@string/ambitious_couscous_krebs_anomie" android:id="@+id/goldfishView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/aborning_shedir_quiz" android:textColor="@color/marque_tomato_palpable" android:textSize="@dimen/grandniece_economy_textsize"/>
<CheckedTextView android:background="@color/prairie_hightail_annulling" android:hint="@string/provide_civet_lebanese" android:id="@+id/ventureHydrateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/scarface_zambia_cochineal_accustom" android:textColor="#C92784"/>
<Button android:hint="@string/cormorant_enoch_herpes" android:id="@+id/laplacianView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/constant_chose_matchbook_oclock" android:textColor="#1584F900" android:textSize="@dimen/sunny_turk_textsize"/>
<CheckedTextView android:background="@color/conscientious_stationary" android:hint="@string/nanometer_patina_pontification" android:id="@+id/skippingSoilView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/fling_dominant_worry" android:textColor="@color/roundtable_annul"/>
</LinearLayout>
<CheckBox android:background="@color/puke_combustion" android:hint="@string/trellis_taxpayer_hare" android:id="@+id/lignumView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/county_hepatitis_knowles" android:textSize="@dimen/diamond_flinty_textsize" app:layout_constraintBottom_toTopOf="@id/megabitImmigrantView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toiletryLayout"/>
<CheckBox android:background="@color/atone_flinch_boon" android:hint="@string/pituitary_percival_some" android:id="@+id/megabitImmigrantView" android:layout_height="wrap_content" android:layout_width="868dp" android:text="@string/bladder_infight_sultry" android:textColor="#4A41F6" app:layout_constraintBottom_toTopOf="@id/acropolisView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/lignumView"/>
<CheckBox android:background="@color/confocal_patrol_feeney" android:hint="@string/frye_declarator_caller_kristin" android:id="@+id/acropolisView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/calibre_garnet_preparative" android:textColor="#E72DEF9F" app:layout_constraintBottom_toTopOf="@id/pounceCarbideView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/megabitImmigrantView"/>
<AutoCompleteTextView android:hint="@string/allegation_thailand_transit_houseboat" android:id="@+id/pounceCarbideView" android:layout_height="wrap_content" android:layout_width="@dimen/cantilever_pediatric_width" android:text="@string/dianne_meek_algorithmic" android:textColor="@color/bromide_crypt_hottentot" app:layout_constraintBottom_toTopOf="@id/dentitionScrutinyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/acropolisView"/>
<CheckBox android:background="@color/tutankhamen_handwaving_tachyon" android:hint="@string/necrosis_shoulder_cuisine_shuffleboard" android:id="@+id/dentitionScrutinyView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/lemur_binuclear_enrich" android:textSize="@dimen/fuzzy_reforestation_textsize" app:layout_constraintBottom_toTopOf="@id/alligatorView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pounceCarbideView"/>
<TextView android:background="@color/vicarious_knell_molecular" android:hint="@string/tehran_annuity_bellingham_thalia" android:id="@+id/alligatorView" android:layout_height="wrap_content" android:layout_width="@dimen/reynolds_carpetbagger_padding" android:paddingBottom="@dimen/committeemen_zapping_height" android:text="@string/dense_hunt_shrunk" app:layout_constraintBottom_toTopOf="@id/maseruView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dentitionScrutinyView"/>
<Button android:background="#B1CC603C" android:hint="@string/isotropic_advent_screen_mcfadden" android:id="@+id/maseruView" android:layout_height="wrap_content" android:layout_width="@dimen/liquid_wherein_size" android:text="@string/eventual_chip_quizzing" android:textColor="@color/bendix_render" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alligatorView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
