<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="center_horizontal|start" android:id="@+id/rubberyLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/statusRuleView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<Button android:hint="@string/religion_benz_creepy" android:id="@+id/apologiaSpitzView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/table_salisbury_norway_sept" android:textColor="@color/priscilla_shorebird_cloak"/>
<EditText android:background="@color/arum_substantial_psyche" android:hint="@string/spud_acrophobic_rutherford_scale" android:id="@+id/stetsonView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/waterfront_faustian_solvent" android:textColor="@color/rain_macromolecular_planetary"/>
<Button android:background="#02030EA1" android:hint="@string/ghoulish_surveyor_housebreak_oriole" android:id="@+id/goldfishView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/astoria_tuple_astigmatic_turvy" android:textColor="@color/ackley_laocoon_weatherproof"/>
<AutoCompleteTextView android:background="@color/dipole_punctuate" android:hint="@string/invocate_diagnostician_capacitate_jagging" android:id="@+id/villaIrremovableView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/redact_brandy_height" android:text="@string/locomotor_introductory_scrape_pittsburgh" android:textColor="#C73EEE46"/>
<CheckBox android:background="#C22D6C" android:hint="@string/megalomania_flock_transmission_mealy" android:id="@+id/hominidView" android:layout_height="wrap_content" android:layout_margin="@dimen/encrust_shot_padding" android:layout_width="wrap_content" android:text="@string/shale_primrose_handwrite_nabbing" android:textColor="@color/middleweight_past"/>
<Button android:hint="@string/waistcoat_mobility_shaffer_millennium" android:id="@+id/chalkboardView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gutenberg_footfall_cruz" android:textColor="@color/merlin_definitive"/>
<CheckBox android:background="@color/tachinid_tenure" android:hint="@string/boswell_tile_joel_accentual" android:id="@+id/univariateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="48dp" android:paddingTop="@dimen/polymer_sharpshoot_padding" android:text="@string/strumming_rennet_southeastern" android:textColor="#F5B620DF"/>
<TextView android:background="#6E05C6" android:hint="@string/analytic_dialup_inevitable" android:id="@+id/stantonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/seaweed_expose_regatta" android:textColor="@color/scabbard_altercate_foil"/>
<CheckBox android:background="@color/puke_combustion" android:hint="@string/catfish_headline_trot_estimate" android:id="@+id/casseroleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/adenosine_panhandle_thorax" android:textColor="@color/bendix_render"/>
<Button android:background="@color/basel_unction" android:hint="@string/ainu_gibberellin_drown" android:id="@+id/pessimismFlageoletView" android:layout_height="wrap_content" android:layout_margin="@dimen/prima_debate_margin" android:layout_width="wrap_content" android:text="@string/copperfield_hoarfrost_your" android:textColor="@color/flesh_robert"/>
<AutoCompleteTextView android:background="@color/geometrician_patina_angst" android:hint="@string/dogfish_crater_valhalla_oval" android:id="@+id/contraptionFelonyView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/ladybird_anion_margin" android:layout_marginStart="@dimen/bartend_grandma_margin" android:layout_marginTop="@dimen/redact_brandy_height" android:layout_width="wrap_content" android:text="@string/stopwatch_wake_cloddish" android:textColor="#44AD5DA0" android:textSize="@dimen/blair_horsemen_textsize"/>
<TextView android:hint="@string/berra_faery_lapse" android:id="@+id/gullahView" android:layout_height="wrap_content" android:layout_margin="@dimen/awoke_chess_size" android:layout_width="wrap_content" android:text="@string/shortage_borne_oracular" android:textColor="@color/merlin_definitive"/>
<AutoCompleteTextView android:background="@color/plight_mycorrhiza" android:hint="@string/descendant_baby_pyramidal" android:id="@+id/forfendView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/eyewitness_presence_wigmake" android:textColor="@color/circumcircle_ionic"/>
<Button android:background="@color/bouquet_discomfit_stannic" android:hint="@string/venerable_jackboot_daley_heard" android:id="@+id/connorsCelsiusView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/shone_inane_margin" android:paddingEnd="@dimen/thermosetting_reverberate_height" android:paddingStart="@dimen/mali_ursa_height" android:paddingTop="@dimen/vetch_slapdash_width" android:text="@string/lusty_request_ireland_ibex" android:textColor="#5C490B"/>
<AutoCompleteTextView android:background="@color/univariate_sera" android:hint="@string/soothsayer_deposition_story" android:id="@+id/saltonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/thrall_lukemia_polecat_laos" android:textColor="#0476D7" android:textSize="@dimen/phagocyte_syphilis_textsize"/>
<Button android:background="@color/arum_substantial_psyche" android:hint="@string/ripoff_sheppard_luis" android:id="@+id/ottoView" android:layout_height="wrap_content" android:layout_margin="@dimen/tacoma_brontosaurus_padding" android:layout_width="wrap_content" android:text="@string/shulman_flexible_gigavolt" android:textColor="@color/newspapermen_device_shirk"/>
<TextView android:background="#469B464D" android:hint="@string/processor_testosterone_pickford_sappho" android:id="@+id/keithSmotherView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/befallen_bourn_neve" android:textColor="@color/penitentiary_wilma_giles"/>
<TextView android:background="@color/hilton_sloven_catastrophe" android:hint="@string/fund_ought_fairfax_greenwich" android:id="@+id/antigoriteView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/nudibranch_contemplate_size" android:layout_marginTop="@dimen/weary_candy_size" android:layout_width="wrap_content" android:text="@string/lukemia_grammatic_navajo" android:textColor="@color/basel_unction"/>
</LinearLayout>
<CheckedTextView android:background="#B8662F" android:hint="@string/councilwomen_tananarive_lulu" android:id="@+id/statusRuleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/vestry_loud_adulterous" app:layout_constraintBottom_toTopOf="@id/gentryView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rubberyLayout"/>
<CheckBox android:background="@color/littoral_behavioral" android:hint="@string/shark_necklace_lucius_change" android:id="@+id/gentryView" android:layout_height="wrap_content" android:layout_margin="@dimen/share_archdiocese_padding" android:layout_width="0dp" android:text="@string/biconnected_yemen_aardvark_shameface" app:layout_constraintBottom_toTopOf="@id/potboilView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/statusRuleView"/>
<EditText android:background="@color/labyrinth_blare" android:hint="@string/degum_rummy_hutch" android:id="@+id/potboilView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/chondrite_graveyard_sardine_casteth" android:textColor="@color/denature_chopin_regress" app:layout_constraintBottom_toTopOf="@id/marcelEmployeeLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gentryView"/>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/marcelEmployeeLayout" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/aspersion_chamois_margin" android:layout_marginStart="@dimen/demote_hare_padding" android:layout_marginTop="@dimen/tsar_soak" android:layout_width="match_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/potboilView">
<Button android:background="#E936BF" android:hint="@string/nassau_slog_exude_milan" android:id="@+id/reportorialChromeView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/hypotheses_soiree_height" android:layout_width="match_parent" android:text="@string/damn_demolish_benny" android:textColor="@color/rafael_shortcut_amphibious" android:textSize="@dimen/shipping_orthogonal_textsize" app:layout_constraintBottom_toTopOf="@id/mispronunciationView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<EditText android:background="@color/jacobus_omitting" android:hint="@string/otter_item_celebes_gemsbok" android:id="@+id/mispronunciationView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/prosopopoeia_rocco_indescribable_lilt" app:layout_constraintBottom_toTopOf="@id/blendVenusView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/reportorialChromeView"/>
<EditText android:background="#793401" android:hint="@string/evaluate_illusory_snippet_inveigh" android:id="@+id/blendVenusView" android:inputType="phone" android:layout_height="wrap_content" android:layout_margin="18dp" android:layout_width="match_parent" android:text="@string/embower_raze_russo_empire" android:textColor="@color/nevins_ammonium" app:layout_constraintBottom_toTopOf="@id/kroneckerTelegraphyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/mispronunciationView"/>
<TextView android:background="@color/scabbard_altercate_foil" android:hint="@string/douglass_paint_aiken_annalen" android:id="@+id/kroneckerTelegraphyView" android:layout_height="wrap_content" android:layout_width="@dimen/lewd_pornographer_height" android:text="@string/well_withstood_decca_ferrous" android:textColor="@color/doff_fuss_concentrate" android:textSize="@dimen/lutheran_giacomo_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/blendVenusView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
